--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Calculator Challenge</title>
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="min-h-screen flex items-center justify-center bg-gray-200">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="max-w-md w-full px-6"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
